--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
     implementation "com.android.support:cardview-v7:26.1.0"
     implementation project(":CalendarViewLib")
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
+
 }
